add_test_executable(${PROJECT_NAME}_test traits/node.cpp)
target_link_libraries(${PROJECT_NAME}_test PRIVATE ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME}_test PRIVATE GTest::gmock)
target_link_libraries(${PROJECT_NAME}_test PRIVATE GTest::gtest)
target_link_libraries(${PROJECT_NAME}_test PRIVATE GTest::gtest_main)

add_test_executable(${PROJECT_NAME}_biased_test traits/biased_node.cpp)
target_link_libraries(${PROJECT_NAME}_biased_test PRIVATE ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME}_biased_test PRIVATE GTest::gmock)
target_link_libraries(${PROJECT_NAME}_biased_test PRIVATE GTest::gtest)
target_link_libraries(${PROJECT_NAME}_biased_test PRIVATE GTest::gtest_main)
