add_test_executable(${PROJECT_NAME}_test sort_nodes.cpp)
target_link_libraries(${PROJECT_NAME}_test PRIVATE ${PROJECT_NAME}_lib)
target_link_libraries(${PROJECT_NAME}_test PRIVATE GTest::gmock)
target_link_libraries(${PROJECT_NAME}_test PRIVATE GTest::gtest)
target_link_libraries(${PROJECT_NAME}_test PRIVATE GTest::gtest_main)
